--- a/index.html
+++ b/index.html
@@ -21,8 +21,35 @@
                 <a href="#">Contacts</a>
             </nav>
         </div>
-
     </header>
-    
+    <!-- première section -->
+    <section class="intro-section">
+        <div class="intro-left">
+            <h1> Crée ton premier site stylé en CSS</h1>
+            <p>
+                A partir d'un simple squelette HTML, apprends a construire une page
+                moderne, lisible et responsive.
+            </p>
+            <div class="intro-btn-container">
+                <button class="ex-btn"   >Découvrir les exercices</button>
+                <button class = "more-btn">En savoir plus</button>
+            </div>
+
+        </div>
+        <div class="intro-right">
+            
+            <h1>Atelier pratique</h1>
+            <p>7h pour comprendre la mise en page, la typographie, les couleurs, et le Flexbox</p>
+            <ul>
+
+                <li>Structure HTML propre</li>
+                <li>CSS organisé</li>
+                <li>Mini-projet final</li>
+            </ul>
+
+        </div>
+
+    </section>
+
 </body>
 </html>
