--- a/index.html
+++ b/index.html
@@ -50,6 +50,37 @@
         </div>
 
     </section>
+    <!-- deuxième section -->
+     <section class ="learning-section">*
+        <div class="txt-container">
+            <h1>Ce que tu vas apprendre</h1>
+            <p>Chaque carte ci dessous représente une étape importante de la journée. Tu vas 
+                les revoir en détail pendant le cours.
+            </p>
+        </div>
+        <div class="card-container">
+            <div class = "card">
+                <h1>Base du CSS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
+                    ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
+                <p>exercices 1 et 2 </p>
+            </div>
+            <div class = "card">
+                <h1>Base du CSS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
+                    ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
+                <p>exercices 1 et 2 </p>
+            </div>
+            <div class = "card">
+                <h1>Base du CSS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
+                    ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
+                <p>exercices 1 et 2 </p>
+            </div>
+        </div>
+        
+        
+     </section>
 
 </body>
 </html>
