methode + html form

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <!-- deuxième section -->
      <section class ="learning-section">*
-        <div class="txt-container">
+        <div class="txt-learning">
             <h1>Ce que tu vas apprendre</h1>
             <p>Chaque carte ci dessous représente une étape importante de la journée. Tu vas 
                 les revoir en détail pendant le cours.
@@ -78,9 +78,44 @@
                 <p>exercices 1 et 2 </p>
             </div>
         </div>
-        
-        
      </section>
+     <!-- troisième section -->
+    <section class="method-section">
+        <div class ="txt-method">
+            <h1>Une approche pas a pas</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quasi doloribus conse
+                quuntur voluptas nobis vel amet. Magnam voluptatibus, excepturi ipsam omnis similique n</p>
+        </div>
+        <div class ="box-method">
+            <h1>Méthode</h1>
+            <ul>
+                <li>sfhdsbfze;fù</li>
+                <li>zeffezfezfezezf</li>
+                <li>fezzfeezfezfezf</li>
+                <li>fzefzefezffezfezf</li>
+            </ul>
+        </div>
 
+    </section>
+    <!-- quatrième section -->
+     <section class="form-section">
+        <div class="form-text">
+            <h1>ehqhgrqerehhererhhereqrhhrher</h1>
+            <p>gGGEEgeeEGEE</p>
+        </div>
+        <div clas="form-container"> 
+            <h1></h1>
+            <form action="">
+                <label for="nom">Ton nom complet</label>
+                <input type="text" name ="nom" id="nom">
+                <label for="email">Ton adresse email</label>
+                <input type="email" name="email" id="email">
+                <label for="message">Ton message</label>
+                <input type="text" name="message" id="message">
+                <input type="submit">
+
+            </form>
+        </div>
+     </section>
 </body>
 </html>
