--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             <h1>ehqhgrqerehhererhhereqrhhrher</h1>
             <p>gGGEEgeeEGEE</p>
         </div>
-        <div clas="form-container"> 
-            <h1></h1>
-            <form action="">
+        <div class="form-container"> 
+            
+            <form action="" class ="form">
                 <label for="nom">Ton nom complet</label>
                 <input type="text" name ="nom" id="nom">
                 <label for="email">Ton adresse email</label>
