--- a/index.html
+++ b/index.html
@@ -117,5 +117,10 @@
             </form>
         </div>
      </section>
+     <footer>
+        <p>©2025 atelier premiere année</p>
+        <p>sdgggrgEGRG</p>
+
+     </footer>
 </body>
 </html>
