--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div>
-            <nav>
+            <nav class="navbar">
                 <a href="#">Acceuil</a>
                 <a href="#">services</a>
                 <a href="#">A propos</a>
