--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     </section>
     <!-- deuxième section -->
-     <section class ="learning-section">*
+     <section class ="learning-section">
         <div class="txt-learning">
             <h1>Ce que tu vas apprendre</h1>
             <p>Chaque carte ci dessous représente une étape importante de la journée. Tu vas 
