--- a/index.html
+++ b/index.html
@@ -115,17 +115,16 @@
                 <h2>Formulaire de contact(maquette)</h2>
                 <div class ="label-input">
                     <label for="nom">Nom</label>
-                    <input type="text" name ="nom" id="nom" value="Ton nom complet">
+                    <input type="text" name ="nom" id="nom" placeholder="Ton nom complet">
                 </div>
                 <div class ="label-input">
                     <label for="email">Ton adresse email</label>
-                    <input type="email" name="email" id="email" value="ton.email@example.com">
+                    <input type="email" name="email" id="email" placeholder="ton.email@example.com">
 
                 </div>
                 <div class ="label-input">
-                    <label for="message">Ton message</label>
-                    <input type="text" name="message" id="message" value="Ton message...">
-                    
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" placeholder="Ton message..." rows="5"></textarea>
 
                 </div>
                     <input type="submit" value="Envoyer">
