--- a/index.html
+++ b/index.html
@@ -64,21 +64,19 @@
         <div class="card-container">
             <div class = "card">
                 <h2>Base du CSS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
-                    ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
-                <p>exercices 1 et 2 </p>
+                <p>Comprendre les sélecteurs, la cascade, la spécificité et les premièrs propriétés de style.</p>
+                <p class="exo-txt">exercices 1 et 2 </p>
+            </div>
+            <div class = "card">
+                <h2>Modèle de boîte</h2>
+                <p>Maîtriser martges,paddings, bodfures et dimensions pour contrôler l'espace de ta page</p>
+                <p class="exo-txt">exercices 3 </p>
             </div>
             <div class = "card">
                 <h2>Base du CSS</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
                     ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
-                <p>exercices 1 et 2 </p>
-            </div>
-            <div class = "card">
-                <h2>Base du CSS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
-                    ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
-                <p>exercices 1 et 2 </p>
+                <p class="exo-txt">exercices 1 et 2 </p>
             </div>
         </div>
      </section>
