--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
             <div class = "card">
                 <h2>Modèle de boîte</h2>
                 <p>Maîtriser martges,paddings, bodfures et dimensions pour contrôler l'espace de ta page</p>
-                <p class="exo-txt">exercices 3 </p>
+                <p class="exo-txt">exercice 3 </p>
             </div>
             <div class = "card">
-                <h2>Base du CSS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, optio quaer
-                    ab explicabo asperiores sapiente quas dignissimos! Cumque, velit nemo?</p>
-                <p class="exo-txt">exercices 1 et 2 </p>
+                <h2>Flexbox</h2>
+                <p>Créer des mises en page modernes, aligner les éléments, construire des galeries et des layouts.</p>
+                <p class="exo-txt">exercice 4 </p>
             </div>
         </div>
      </section>
@@ -137,8 +136,8 @@
         </div>
      </section>
      <footer>
-        <p>©2025 atelier premiere année</p>
-        <p>sdgggrgEGRG</p>
+        <p>©2025 - Atelier CSS - Premiere année</p>
+        <p>Ce site est un support pédagogique et ne collecte aucune donnée</p>
 
      </footer>
 </body>
