--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="form-container"> 
             
-            <form action="" class ="form">
+            <form  class ="form">
                 <h2>Formulaire de contact(maquette)</h2>
                 <div class ="label-input">
                     <label for="nom">Nom</label>
@@ -129,7 +129,7 @@
                     <textarea id="message" name="message" placeholder="Ton message..." rows="5"></textarea>
 
                 </div>
-                    <input type="submit" placeholder="Envoyer">
+                    <input type="submit" value="Envoyer">
                 
 
             </form>
